# a-stock-daily

./: .gitignore  __test_conn.py  pyproject.toml
.github/workflows/: market_push.yml
src/: config.py  fetcher.py  mod.py  renderer.py
