[project]
name = "stock-daily-brief"
version = "0.1.0"
description = ""
authors = [
    {name = "sora",email = "sloananna326@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare (>=1.17.88,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "apscheduler (>=3.11.1,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "telebot (>=0.0.5,<0.0.6)",
    "chinesecalendar (>=1.11.0,<2.0.0)",
    "dataframe-image (>=0.2.7,<0.3.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pytelegrambotapi (>=4.29.1,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "numpy (>=2.3.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
